hphp/hack/test/typecheck/reified_generics/reifiable3.php.exp
File "reifiable3.php", line 10, characters 28-43:
Invalid type (Typing[4322])
File "reifiable3.php", line 9, characters 5-15:
This type constant has the __Reifiable attribute
File "reifiable3.php", line 10, characters 32-42:
But a PHP array was found here
File "reifiable3.php", line 17, characters 19-26:
Invalid type (Typing[4322])
File "reifiable3.php", line 16, characters 5-15:
This type constant has the __Reifiable attribute
File "reifiable3.php", line 14, characters 23-24:
But this abstract type constant does not have the __Reifiable attribute
File "reifiable3.php", line 20, characters 13-13:
Class D does not correctly implement all required members  (Typing[4322])
File "reifiable3.php", line 20, characters 23-23:
Some members are incompatible with those declared in type C
Read the following to see why:
File "reifiable3.php", line 21, characters 19-36:
Invalid type
File "reifiable3.php", line 6, characters 5-15:
This type constant has the __Reifiable attribute
File "reifiable3.php", line 21, characters 25-35:
But a PHP array was found here
File "reifiable3.php", line 27, characters 29-31:
Invalid constraint (Typing[4322])
File "reifiable3.php", line 26, characters 5-15:
This type constant has the __Reifiable attribute
File "reifiable3.php", line 3, characters 12-32:
But a PHP array was found here
